--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,14 @@ const { title, description } = Astro.props as Props;
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-5C5DGHJC');</script>
+		<!-- End Google Tag Manager -->
+		
 		<!-- DNS prefetch for external domains -->
 		<link rel="dns-prefetch" href="//www.googletagmanager.com">
 		<link rel="dns-prefetch" href="//connect.facebook.net">
@@ -156,6 +164,10 @@ const { title, description } = Astro.props as Props;
 		<!-- End Meta Pixel Code -->
 	</head>
 	<body>
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5C5DGHJC"
+		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) -->
 		<slot />
 		<OptimizedLoading />
 	</body>
